[gd_scene load_steps=3 format=3 uid="uid://b326cb226l8ye"]

[ext_resource type="Script" uid="uid://cngn671jm8omd" path="res://ui/pause_menu.gd" id="1_fob5h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fob5h"]
bg_color = Color(0, 0, 0, 0.658824)

[node name="PauseMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_fob5h")
script = ExtResource("1_fob5h")

[node name="Main" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="PanelContainer2" type="PanelContainer" parent="Main/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 82.85)
layout_mode = 2

[node name="Label" type="Label" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 66
text = "Paused"
horizontal_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="Main/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="ResetLevelButton" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Reset Level"

[node name="OptionsButton" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ResumeButton" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="PanelContainer" type="PanelContainer" parent="Main/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 63.71)
layout_mode = 2

[node name="LevelSelectLabel" type="Label" parent="Main/VBoxContainer"]
modulate = Color(1, 1, 1, 0.611765)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Select Level"
horizontal_alignment = 1

[node name="LevelSelectContainer" type="HBoxContainer" parent="Main/VBoxContainer"]
modulate = Color(1, 1, 1, 0.611765)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PrevButton" type="Button" parent="Main/VBoxContainer/LevelSelectContainer"]
layout_mode = 2
text = "<"

[node name="LevelLabel" type="Label" parent="Main/VBoxContainer/LevelSelectContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level 0"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="Main/VBoxContainer/LevelSelectContainer"]
layout_mode = 2
text = ">"

[node name="Cheating" type="Label" parent="Main/VBoxContainer"]
modulate = Color(1, 1, 1, 0.611765)
layout_mode = 2
theme_override_colors/font_color = Color(0.912448, 0.156038, 1.92523e-07, 1)
theme_override_font_sizes/font_size = 20
text = "(Cheating!)"
horizontal_alignment = 1
